# UF_QMB3302

./: .gitignore  README.md  _quarto.yml  data  materials
code/: 04_working_with_data.ipynb  07_intro_to_analytics.ipynb  concepts_cross_validation.py  concepts_data_leakage.py  concepts_one_hot_encoding.py  concepts_scaling_distance.py  concepts_train_test_split.py  data_generator.py  hello.py  hello_world.py  homesadj.csv  main.py  one_hot_encoding_demo.py  optional_time_series_broadway.py  price_dif_dif.py  pyproject.toml  quiztest.py  synthetic_coffee_price_experiment.csv  week01_main.py  week02_main.py  week02_self_guided_workbook.py  week03_main.py  week03_self_guided_workbook.py  week04_main.py  week04_self_guided_workbook.py  week05_main.py  week05_main_quizbase.py  week05_self_guided_workbook.py  week06a_self_guided_workbook.py  week06b_main.py
code/data/: BunchOfDates.csv  Downbound_Grain_Barge_Rates.csv  GSPC.csv  NVDA.csv  ZM_Daily.csv  ZM_WORK.csv  ames.csv  country_2012.csv  covid_survey_full.csv  covid_survey_samp.csv  customer.csv  employees.csv  fakeXtest.csv  fakeXtrain.csv  homes.csv  homesadj.csv  mvp_sales.csv  mvps.csv  projects.csv  regEG.csv  regEGfit.csv  rfm.csv  rfmfile.csv  scattereg.csv  seattle_pet_licenses.csv  segments.xlsx  segments_in_excel.xlsx  segments_sample.csv  shoppers.csv  titanic.csv  wheat_prices.csv  zm15.csv
code/notebooks/: 01_foundations_of_python.ipynb  02_control_structures_and_functions.ipynb  03_working_with_data.ipynb  04_working_with_data.ipynb  05_visualization.ipynb  06_statistics.ipynb  09_decision_trees.ipynb  (+7 more)
(+109 files in other folders)
