[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# Pin to Python 3.13.x (prevents “one machine on 3.14” drift)
requires-python = ">=3.13,<3.14"

dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
